<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/parenta"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical"
    android:padding="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"/>

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"/>

    <LinearLayout
        android:id="@+id/parent_ll"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.80"
            android:padding="8dp">

            <ImageView
                android:id="@+id/otp_govt_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/samagra_name_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:layout_weight="0.20"
                android:text="@string/please_enter_the_otp_sent_to_the_mobile_number_of_school_incharge"
                android:layout_width="match_parent"
                style="@style/LabelStyle3"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelStyle3"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp"
                    android:hint="@string/otp"
                    style="@style/LabelStyle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:gravity="top|start"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                style="@style/LabelStyle3"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LabelStyle3"

                app:counterEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:hint="@string/confirm_password"
                    style="@style/LabelStyle3"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/LoginButtonStyle"
                android:text="@string/submit"
                android:textStyle="normal"
                android:id="@+id/password_submit"
                android:layout_width="match_parent"
                android:layout_height="64dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.25"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/countdown_timer"
                style="@style/LabelStyle3"
                android:text="@string/seconds_remaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ProgressBar>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>